<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MineActivity">

    <RelativeLayout
        android:id="@+id/index_rl_contain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ebebeb"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/re_myinfo"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="18dp"
                android:clickable="true"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">


                <com.loopj.android.image.SmartImageView
                    android:id="@+id/iv_avatar"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="15dp"
                    android:scaleType="centerCrop"
                    android:src="@android:drawable/sym_def_app_icon">

                </com.loopj.android.image.SmartImageView>

                <LinearLayout
                    android:id="@+id/ll_name"
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="12dp"
                    android:layout_toRightOf="@id/iv_avatar"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="用户名："
                        android:textColor="#353535"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/yonghuxingming"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:textColor="#353535"
                        android:textSize="16sp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_fxid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="14dp"
                    android:layout_marginBottom="22dp"
                    android:layout_toRightOf="@id/iv_avatar"
                    android:text="点击修改信息"
                    android:textColor="#AAAAAA"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/dengruyonghu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="55dp"
                    android:layout_marginBottom="10dp"
                    android:layout_toRightOf="@id/iv_avatar"

                    android:textColor="#AAAAAA"
                    android:textSize="14sp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/re_xiangce"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:clickable="true"
                android:paddingLeft="12dp">

                <ImageView
                    android:id="@+id/iv_xiangce"
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="12dp"
                    android:src="@android:drawable/ic_menu_send" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:layout_toRightOf="@id/iv_xiangce"
                    android:text="照片上传"
                    android:textColor="#353535"
                    android:textSize="16sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.2dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginRight="12dp"
                    android:background="#dadada" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/re_aboutwe"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:clickable="true"
                android:paddingLeft="12dp">

                <ImageView
                    android:id="@+id/iv_shoucang"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="12dp"
                    android:src="@android:drawable/ic_menu_compass" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:layout_toRightOf="@id/iv_shoucang"
                    android:text="关于我们"
                    android:textColor="#353535"
                    android:textSize="16sp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/re_help"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:paddingLeft="12dp">

                <ImageView
                    android:id="@+id/iv_money_bag"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="12dp"
                    android:src="@android:drawable/ic_menu_help" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:layout_toRightOf="@id/iv_money_bag"
                    android:text="帮助与反馈"
                    android:textColor="#353535"
                    android:textSize="16sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.2dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginRight="12dp"
                    android:background="#dadada" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/tuichu"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:paddingLeft="12dp">

                <ImageView
                    android:id="@+id/iv_setting"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="12dp"
                    android:src="@android:drawable/ic_menu_manage" />

                <TextView
                    android:id="@+id/logout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:layout_toRightOf="@id/iv_setting"
                    android:text="退出登入"
                    android:textColor="#353535"
                    android:textSize="16sp" />

            </RelativeLayout>

        </LinearLayout>

        <FrameLayout
            android:id="@+id/index_fl_bottom_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/index_fl_bg_color">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@mipmap/bottom_bar_background"
                android:clickable="true"
                android:orientation="horizontal">

                <!-- 首页 -->

                <LinearLayout
                    android:id="@+id/index_bottom_bar_home"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="4dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/index_bottom_bar_home_image"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="top|center"
                        android:src="@drawable/index_bottom_bar_image_select_home" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|center"
                        android:layout_marginTop="2dp"
                        android:text="@string/index_bottom_bar_home"
                        android:textColor="@drawable/bottom_bar_text_color_select"
                        android:textSize="10sp" />

                </LinearLayout>

                <!-- 动态 -->

                <LinearLayout
                    android:id="@+id/index_bottom_bar_dynamic_state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="4dp"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/index_bottom_bar_dynamic_state_image"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="top|center"
                        android:layout_marginTop="2dp"
                        android:src="@drawable/index_bottom_bar_image_select_dynamic_state" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|center"
                        android:layout_marginTop="2dp"
                        android:text="@string/index_bottom_bar_dynamic_state"
                        android:textColor="@drawable/bottom_bar_text_color_select"
                        android:textSize="10sp" />
                </LinearLayout>

                <!-- 留白 -->

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                </FrameLayout>

                <!-- 积分 -->

                <LinearLayout
                    android:id="@+id/index_bottom_bar_integral"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="4dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/index_bottom_bar_integral_image"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="top|center"
                        android:src="@drawable/index_bottom_bar_image_select_integral"
                        app:srcCompat="@android:drawable/stat_notify_chat" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|center"
                        android:layout_marginTop="2dp"
                        android:text="@string/index_bottom_bar_integral"
                        android:textColor="@drawable/bottom_bar_text_color_select"
                        android:textSize="10sp" />
                </LinearLayout>

                <!-- 我的 -->

                <LinearLayout
                    android:id="@+id/index_bottom_bar_me"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="4dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/index_bottom_bar_me_image"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="top|center"
                        android:src="@drawable/index_bottom_bar_image_select_me" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|center"
                        android:layout_marginTop="2dp"
                        android:text="@string/index_bottom_bar_me"
                        android:textColor="@drawable/bottom_bar_text_color_select"
                        android:textSize="10sp" />

                </LinearLayout>

            </LinearLayout>

        </FrameLayout>

        <ImageView
            android:id="@+id/index_bottom_bar_scan"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="0dp"
            android:src="@android:drawable/ic_menu_add" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>